--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  <a href="mamt">Absolute Path (external link)</a>
+  <a href="mamt.org">Absolute Path (external link)</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   <a href="./video.yaml">Relative Path (internal link)</a>
